--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      MONGO_URI: 'mongodb://mongodb:27017/chatdb'
+      MONGO_URI: 'mongodb://mongodb:27017/users'
       SERVER_PORT: 3000
       CLIENT_URL: 'http://localhost:5000'
 
